--- a/PORTFOLIO.css
+++ b/PORTFOLIO.css
@@ -45,8 +45,6 @@ h1 {
     font-size: 50px;
     font-family: cursive;
 }
-#PET-INTRO {
-    width: 300px;
-    object-fit: cover;
-    border-radius:50%;
-}
+/*#PET-INTRO {
+   
+}*/
